# quantum-rl-scheduler

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Issues并行会话任务提示词.md  LICENSE  MODELS.md  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  mutmut_config.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-quantum.txt  requirements.txt  run_mutmut.sh  run_mutmut_simple.sh  run_tests.py  setup.ps1  setup.sh  技术白皮书_更新计划.md  技术白皮书_量子RL调度系统_v3.docx  演示视频分镜脚本.md  答辩PPT大纲.md
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.gpu.yml  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml  dependency-update.yml  pr-automation.yml  release.yml
.trae/: instructions.md
config/: .env.example  alerts.yml  config.dev.yaml  config.prod.yaml  config.yaml  quota.yaml  submission_manifest.yaml  tenants.yaml
docs/: Code_Wiki.md  Git工作流.md  README.md  SOLUTIONS_评委审查总览从当前64100到冲奖水平的p0p2路.md  annealing_significance-defense.md  api_reference.md  autonomous_findings_20260725.md  award_roadmap.md  bidirectional_empowerment.md  code_freeze_policy.md  cross_hardware_compatibility.md  cross_hardware_scalability.md  defense_qa_handbook.md  demo_video_script.md  dependency_management.md  deployment.md  deployment_architecture.md  dual_empowerment_asymmetry_analysis.md  novelty_statement.md  observation_dim_standard.md  platform_landing_value.md  production_roadmap.md  real_machine_verification_boundary.md  references.md  requirements_traceability.md  sota_comparison.md  technical_bottlenecks.md  value_deep_quantification.md  value_quantification.md  value_summary_for_defense.md  代码冻结流程.md  团队分工.md  开发计划.md  新人上手指南.md  真机训练接入指南.md  队友协同开发指南.md  项目记忆_给AI.md  项目记忆_给TRAE.md
docs/award_sprint_issues/: 07_P2_天衍287深度利用.md  README.md
githooks/: commit-msg  pre-push
results/: benchmark_history.jsonl  machine_stability_report.md  multi_machine_demo_report.md  multi_machine_real_report.md  realmock_comparison_report.md  strategy_comparison_report_v4.md
results/ablation_d3_training/: d3_training_ablation.json  d3_training_ablation.md
results/explainability_logs/: decisions.jsonl
results/gradient_stress/: gradient_stress_test_report.md  ppo_gradient_14dim.json
results/machine_scalability/: machine_scalability.md  machine_scalability_20260722_121842.json
results/real_machine/: issue164_closed_loop.json  issue165_ablation.json  issue165_ablation_attempt2.json  issue165_ablation_attempt3.json  issue165_ablation_attempt4.json  issue165_ablation_preliminary.json  issue192_10seeds.json  smoke_quick.json
results/reports/: ablation_d3_analysis.md  ablation_report.md  annealing_solver_comparison.md  authoritative_metric_audit.md  d3_reward_ablation_report.md  dag_workflow_demo.json  dag_workflow_demo.md  dqn_14dim_retrain_report.json  dqn_ppo_fcfs_comparison.md  evidence_lineage.md  explainability_demo.json  explainability_demo.md  fair_scheduling_report.md  head_only_validation.md  high_load_fairness_report.md  marl_heatmap.html  multiseed_real_machine_report.md  multiseed_real_machine_report_10seeds.md  multiseed_real_machine_report_20260724.md  mutation_testing_report.md  ppt_separation_visualization.html  quantum_ratio_sensitivity.md  real_machine_ablation.md  real_machine_boundary_statement.md  real_machine_closed_loop.md  real_machine_collection_report_20260702.md  real_machine_performance.md  real_machine_preregistration.md  real_machine_statistical_significance.md  real_machine_validation.md  real_result_feedback_validation.md  reward_ablation_d3.md  roi_analysis.md  scale_stress_test.md  statistical_validation.md  strategy_comparison.md  stress_test_gradient.md  stress_test_report.md  submission_validation_report.md  tradeoff_analysis.md  (+2 more)
scripts/: ablation_annealing.py  ablation_study.py  benchmark_parser.py  calibrate_mock.py  cli.py  demo.py  demo_cqlib.py  demo_multi_machine.py  diagnose_reward.py  e2e_test.py  efficient_real_benchmark.py  generate_ablation_report.py  generate_report.py  hyperparameter_search.py  install-hooks.sh  mock_vs_real.py  run_simulation.py  stress_test.py  test_annealing_ppo.py  test_cqlib.py  test_mock_api.py  train_agent.py  train_lstm_agent.py  verify_annealing_real.py  verify_real_callback.py
scripts/benchmarking/: benchmark_parser.py  compare_hierarchical_annealing.py  diagnose_reward.py  efficient_real_benchmark.py  high_load_fairness.py  mock_vs_real.py  multi_tenant_fairness.py  scale_stress_test.py  stress_test.py
scripts/ci/: audit_authoritative_metrics.py  benchmark_tracker.py  evidence_lineage.py  pre_freeze_check.sh  validate_submission.py  visualize_benchmark_trend.py
scripts/demo/: demo.py  demo_cqlib.py  demo_multi_machine.py
scripts/evaluation/: ablation_annealing.py  ablation_d3_reward.py  ablation_d3_training.py  ablation_study.py  annealing_solver_comparison.py  compare_pareto.py  dqn_failure_analysis.py  roi_analysis.py  (+18 more)
src/: __init__.py  exceptions.py  exceptions.py.isorted
tests/: conftest.py  test_ablation.py  test_ablation_d3_training.py  test_agent_checkpoint.py  test_alerts.py  test_annealing.py  test_annealing_loop.py  test_api.py  test_async_annealing_callback.py  test_baselines.py  test_callbacks.py  test_checkpoint_manager.py  test_circuit_breaker.py  test_dag_scheduler.py  test_env_boundaries.py  test_env_real_machine.py  test_env_real_machine_extended.py  test_env_render.py  test_env_reproducibility.py  test_evidence_lineage.py  test_explainability.py  test_export_extended.py  test_helpers.py  test_holdout_evaluation.py  test_hybrid_scheduler.py  test_integration.py  test_logging.py  test_logging_intercept.py  test_machine_scalability.py  test_marl.py  test_marl_coverage.py  test_marl_edge_cases.py  test_metric_audit.py  test_metrics.py  test_multi_objective.py  test_multi_tenant_fairness.py  test_multiseed_real_machine_analysis.py  test_parser.py  test_platform_compat.py  test_ppo_agent_extended.py  (+21 more)
(+112 files in other folders)
