[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# 项目元数据
# =============================================================================
[project]
name = "quantum-rl-scheduler"
version = "0.5.0"
description = "Quantum RL-driven Intelligent Scheduling System for TianYan Cloud Platform"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "胡展瑞" }
]
keywords = [
    "quantum-computing",
    "reinforcement-learning",
    "scheduling",
    "simulated-annealing",
    "quantum-annealing",
    "operations-research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

# 只追踪 src/ 下的包
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# =============================================================================
# Black — 代码格式化
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | \.tox
  | htmlcov
  | dist
  | build
  | models
)/
'''

# =============================================================================
# isort — import 排序
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = [".mypy_cache", ".pytest_cache", ".venv", "htmlcov", "dist", "build", "models"]

# =============================================================================
# flake8 — 代码检查（已由 ruff 替代，保留配置供本地回退使用）
# =============================================================================
[tool.flake8]
max-line-length = 100
max-complexity = 15
extend-ignore = [
    "E203",   # whitespace before ':'
    "E402",   # module level import not at top (for src/ path setup)
    "E501",   # line too long (handled by black)
    "W503",   # line break before binary operator
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    ".venv",
    "htmlcov",
    "dist",
    "build",
    "models",
]
per-file-ignores = [
    "tests/*:F401,F811",   # 测试文件允许未使用的 import 和重定义
    "scripts/*:E402",       # 脚本文件允许顶部 import
]

# =============================================================================
# ruff — 高速代码检查（Rust 实现，替代 flake8，性能提升 100x）
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    ".venv",
    "htmlcov",
    "dist",
    "build",
    "models",
    "logs",
    "data",
]

[tool.ruff.lint]
# 规则集：覆盖 flake8 默认 + isort + naming + bugbear + simplify 等
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]
# 忽略：与 black 冲突或项目历史遗留
ignore = [
    "E501",   # line too long（由 black 处理）
    "E402",   # module level import not at top（src/ 路径设置需要）
    "B008",   # 函数默认值中调用函数（FastAPI Depends 等常见模式）
    "RUF001", # 中文字符在字符串中（项目注释/文案规范为中文）
    "RUF002", # 中文字符在文档字符串中（项目 docstring 规范为中文）
    "RUF003", # 中文字符在注释中（项目注释规范为中文）
    "N812",   # lowercase imported as non-lowercase（torch.nn.functional as F 是 PyTorch 通用约定）
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]      # 测试文件允许未使用的 import 和重定义
"scripts/*" = ["E402"]            # 脚本文件允许顶部 import

# =============================================================================
# bandit — 安全扫描（检测 API 密钥泄露、不安全函数等）
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "scripts", "docs", "models", "logs", "data"]
skips = ["B101"]  # assert 在测试中有用，但 tests/ 已被排除，此处保留以防误扫

# =============================================================================
# mypy — 类型检查
# =============================================================================
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
exclude = [
    "tests/",
    "scripts/",
    "models/",
    "logs/",
    "data/",
    ".venv/",
]

# =============================================================================
# pytest — 测试配置
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-W", "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "real_machine: marks tests requiring real quantum machine access",
    "integration: marks integration tests",
    "unit: marks unit tests",
]
timeout = 300
timeout_method = "thread"

# 覆盖率配置
[tool.coverage.run]
source = ["src"]
omit = [
    "*/__init__.py",
    "*/tests/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 40
show_missing = true
skip_empty = true

# =============================================================================
# EditorConfig 补充 — 在非 VS Code 编辑器中生效
# =============================================================================
[tool.editorconfig]
indent_style = "space"
indent_size = 4
end_of_line = "lf"
charset = "utf-8"
trim_trailing_whitespace = true
insert_final_newline = true

# =============================================================================
# mutmut 配置 — Mutation Testing
# =============================================================================
[tool.mutmut]
paths_to_mutate = ["src"]
test_command = "python -m pytest tests/ --no-cov -x"
runner = "pytest"
target = 80
